--- a/index.html
+++ b/index.html
@@ -1,1 +1,71 @@
+<!DOCTYPE html>
+<html lang="fr">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>FIVES - Dév's référencement</title>
+    <link rel="stylesheet" href="./src/styles.css/style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Amita&family=Roboto+Condensed:wght@300;400;700&display=swap"
+      rel="stylesheet"
+    />
+  </head>
+  <body>
+    <header>
+      <nav>
+        <div class="logo">
+          <h4>FIVES</h4>
+        </div>
+        <ul class="nav-links">
+          <li><a class="current" href="#">Acceuil</a></li>
+          <li><a href="communaute.html">Communauté</a></li>
+          <li><a href="about.html">A propos</a></li>
+          <li><a href="contact.html">Contact</a></li>
+        </ul>
+        <div class="burger">
+          <div class="line1"></div>
+          <div class="line2"></div>
+          <div class="line3"></div>
+        </div>
+      </nav>
+      <div class="fives-bg"><span>FIVES</span></div>
+      <div class="container">
+        <div class="title-fives">
+          <h1>FIVES</h1>
+          <p>
+            Le réseaux <span>N°1</span> des développeurs de la WildCodeSchool !
+          </p>
+        </div>
+      </div>
+    </header>
+    <section>
+        <div class="container">
+          <div><img src="./src/img/us.jpg" alt="" width="630px" ></div>
+        <div >
+    <h1>blablabla</h1>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque recusandae doloribus nulla dolorum, vitae ducimus tempore quisquam, maxime repellendus ipsam tenetur deleniti, odit quo consequatur deserunt commodi labore culpa repellat.</p>
+  </div>
+        <div>
+          <p>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum omnis
+            minus eius quam ut libero, quis culpa. Debitis recusandae
+            perspiciatis saepe deserunt soluta est dolore illum dicta, quisquam
+            ut numquam? Officia expedita mollitia a accusantium, consectetur
+            fugiat? Cum sit praesentium culpa autem expedita quo sapiente ipsam
+            ad excepturi, eligendi nisi. Fugiat, dolores asperiores? Repellat
+            velit sequi error perferendis voluptas dolor. Laboriosam laborum quo
+            sapiente. Fugit quod corporis autem obcaecati eius, harum laudantium
+            blanditiis veritatis optio et tempore inventore perspiciatis aperiam
+            possimus mollitia commodi dolorem nemo, quidem quas aliquam
 
+          </p>
+        </div>
+      </section>
+    </div>
+
+    <script src="./src/index.js"></script>
+  </body>
+</html>
