class header added to tag header

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     />
   </head>
   <body>
-    <header>
+    <header class="header">
       <nav>
         <div class="logo">
           <h4>FIVES</h4>
