--- a/about.html
+++ b/about.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>FIVES - Dév's référencement</title>
-    <link rel="stylesheet" href="./src/styles.css/style.css" />
+    <link rel="stylesheet" href="./src/styles.css/coreStyles.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -14,6 +14,22 @@
     />
   </head>
   <body>
+    <nav>
+      <div class="logo">
+        <h1>FIVES</h1>
+      </div>
+      <ul class="nav-links">
+        <li><a href="index.html">Acceuil</a></li>
+        <li><a href="communaute.html">Communauté</a></li>
+        <li><a class="current" href="about.html">A propos</a></li>
+        <li><a href="contact.html">Contact</a></li>
+      </ul>
+      <div class="burger">
+        <div class="line1"></div>
+        <div class="line2"></div>
+      </div>
+    </nav>
+
     <script src="./src/index.js"></script>
   </body>
 </html>
