Added about.html aboutstyle.css code in index.js et une image ligth.png

--- a/about.html
+++ b/about.html
@@ -5,13 +5,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>FIVES - Dév's référencement</title>
+    <link rel="stylesheet" href="./src/styles.css/aboutStyle.css" />
     <link rel="stylesheet" href="./src/styles.css/coreStyles.css" />
+
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Amita&family=Roboto+Condensed:wght@300;400;700&display=swap"
       rel="stylesheet"
     />
+    <!--============Icon W3C and Google link=============-->
+
   </head>
   <body>
     <nav>
@@ -29,6 +33,93 @@
         <div class="line2"></div>
       </div>
     </nav>
+    <!--Partie About Rafael Dubois-->
+
+    <section class="presentation">
+      <div class="top" id="top">
+        <h5>Un réseau pour partager et mettre de la lumiére sur vos idées :</h5>
+        <button type="button" onclick="toggleBtn()" id="btn">
+          <span></span>
+        </button>
+      </div>
+
+      <img src="./src/img/light.png" class="light" id="light" />
+
+      <h6>Réalisation de Site internet responsive</h6>
+      <p>
+        > One Page, vitrine,&nbsp;E-commerce, blog, Portail… touchez de nouveaux
+        clients en présentant votre activité ou vos services et&nbsp;vendez
+        plus.
+      </p>
+      <img class ="icoabout" src="./src/ico/responsive.png" alt="">
+
+      <h6>Création de votre maquette graphique</h6>
+      <p>
+        > Définition de vos besoins et mise en place de vos idées, grâce à nos
+        designers travaillant sous photoshop, et la suite adobe
+      </p>
+      <img class ="icoabout" src="./src/ico/design.png" alt="">
+      <h6>Conseil et suivit durant la phase de création</h6>
+      <p>
+        > Assistance et conseille durant toute la phase de l’élaboration de
+        votre&nbsp;projet web.&nbsp;Nous vous accompagnons et restons disponible
+        7 jours sur 7.
+      </p>
+      <img class ="icoabout" src="./src/ico/seo.png" alt="">
+      <h6>Référencement SEO, Web Marketing</h6>
+      <p>
+        > Référencement et bonne stratégie afin de booster votre activité sur les
+        moteurs de recherche tels que Google et les réseaux sociaux.
+      </p>
+      <img class ="icoabout" src="./src/ico/referencement.png" alt="">
+    </section>
+    <section class="description">
+      <div class="flex">
+        <div class="pourquoi">
+          <h4>Pour Quoi ?</h4>
+          <img src="./src/ico/question.png" alt="image of question mark" >
+          <p>
+            Faciliter la mise en réseau et la réalisation de projets web
+            collectifs tout en proposant un écosystème communautaire pour
+            partager ses projets et mettre en valeur ses compétences.
+          </p>
+          <br />
+          <p>
+            Pour vous mettre en relation avec ces memes developpeurs/euses
+            junior talentueux et motivé, pour VOTRE projet
+          </p>
+        </div>
+        <div class="pourqui">
+          <h4>Pour Qui ?</h4>
+          <img src="./src/ico/target.png" alt="image of target">
+          <p>
+            Les Wilders en cours de développement, les futurs
+            developpeurs/euses web junior ou sénior.
+          </p>
+          <br />
+          <p>
+            Pour vous, nous vous accompagnons dans le recherche d'un développeur
+            et mettons a disposition sur notre plateforme des professionnel
+            issue de la formation dispensé par la WildCodeSchool.
+          </p>
+        </div>
+      </div>
+      <div class="column">
+        <h5 class="entete">
+          Le site FIVE est aussi une expérience de réseau communautaire de passionés
+          du développement web à petite échelle.<br />
+          <em>>Pour les Wilders par des Wilders/&lt; </em>
+        </h5>
+        <div class="container">
+          <div id="text">
+            <p>Aury Gaël,</p>
+            <p>Carter Jimmy,</p>
+            <p>Kheloufi Oualid,</p>
+            <p>Dubois Rafaël.</p>
+          </div>
+        </div>
+      </div>
+    </section>
 
     <script src="./src/index.js"></script>
   </body>
