bien joué les gars

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       </nav>
 
       <div class="banner">
-        <div>
+        <div class="slideInLeft">
           <h1>FIVES</h1>
           <p>
             Le réseaux <span>N°1</span> des développeurs de la WildCodeSchool
@@ -88,78 +88,24 @@
             <p>Réalisation de Site internet responsive</p>
           </div>
         </div>
-      </div>
-    </section>
-
-     <section>
-      <div class="parallax">
-        <div class="overlay">
-           <h2>
-           Notre Engagement, vous fournir une livraison rapide est fonctionnel
-          </h2>
-      </div>
-       
+        <div>
+          <p>
+            Nos développeurs s'adapte a vos besoin est utilise différentes
+            technique de production. Pour rester informé de leurs évolutions
+            n'hésitez pas a consulter la rubrique dédiés à la communauté.
+          </p>
         </div>
       </div>
     </section>
-    <section> <!--
-      <div class="glass-background"> -->
-
-    <!-- <div class="card">
-          <input type="radio" name="select" id="slide_1" checked />
-          <input type="radio" name="select" id="slide_2" />
-          <input type="radio" name="select" id="slide_3" />
-          <input type="checkbox" id="slideImg" />
-
-          <div class="slider">
-            <label for="slide_1" class="slide slide_1"></label>
-            <label for="slide_2" class="slide slide_2"></label>
-            <label for="slide_3" class="slide slide_3"></label>
-          </div>
-
-          <div class="inner_part">
-            <label for="slideImg" class="img">
-              <img class="img_1" src="./src/img/jimmy_picture.jpg" />
-            </label>
-            <div class="content content_1">
-              <div class="title">Jimmy Jung</div>
-              <div class="text">
-                Sa particularité, son efficacité ! Développeur de renom il saura
-                vous guider dans l'intégralité de votre projet, de la maquette a
-                la gestion totale de la sécurité .
-              </div>
-            </div>
-          </div>
-
-          <div class="inner_part">
-            <label for="slideImg" class="img">
-              <img class="img_2" src="./src/img/jimmy_picture.jpg" />
-            </label>
-            <div class="content content_2">
-              <div class="title">Jimmy Jung</div>
-              <div class="text">
-                Sa particularité, son efficacité ! Développeur de renom il saura
-                vous guider dans l'intégralité de votre projet, de la maquette a
-                la gestion totale de la sécurité .
-              </div>
-            </div>
-          </div>
-
-          <div class="inner_part">
-            <label for="slideImg" class="img">
-              <img class="img_3" src="./src/img/jimmy_picture.jpg" />
-            </label>
-            <div class="content content_3">
-              <div class="title">Jimmy Jung</div>
-              <div class="text">
-                Sa particularité, son efficacité ! Développeur de renom il saura
-                vous guider dans l'intégralité de votre projet, de la maquette a
-                la gestion totale de la sécurité .
-              </div>
-            </div>
-          </div>
-        </div> -->
-    <!-- </div>
+    <section>
+      <div class="parallax">
+        <h2 id="goIn">
+          Notre Engagement, vous fournir une livraison rapide est fonctionnel
+        </h2>
+      </div>
+    </section>
+    <section>
+      <div class="glass-background"></div>
     </section>
     <section>
       <div class="bloc-contact">
@@ -180,7 +126,7 @@
         Mention légale - tout droit reservé - projet réalisé dans un cadre de
         formation
       </p>
-    </footer> -->
+    </footer>
     <script src="./src/index.js"></script>
   </body>
 </html>
