--- a/communaute.html
+++ b/communaute.html
@@ -12,6 +12,7 @@
       href="https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Amita&family=Roboto+Condensed:wght@300;400;700&display=swap"
       rel="stylesheet"
     />
+<link rel="stylesheet" href="./src/styles.css/communauté.css">
   </head>
   <body>
     <nav>
@@ -29,7 +30,102 @@
         <div class="line2"></div>
       </div>
     </nav>
-
+ <div class="contenucommunaute">
+      <div class="container">
+        <section class="presentation">
+          <h1 id="NosMembres">Tous nos membres</h1>
+          <p>Si toi aussi tu es un wilder et que notre projet te donne envie de nous rejoindre, <br> c'est par ici que ça se passe :</p>
+          <button name="button" type="submit" class="ButtonOrange">Inscription</button>
+        </section>
+        <div class="membres">
+          <form class="UsersFilter" action="membres">
+            <select name="poste" id="poste">
+              <option value="poste occupé">Poste occupé</option>
+              <option value="développeur javascript">développeur javascript</option>
+              <option value="webmaster">webmaster</option>
+              <option value="intégrateur">intégrateur</option>
+              <option value="développeur fullstack">développeur fullstack</option>
+              <option value="développeur front-end">développeur front-end</option>
+              <option value="développeur back-end">développeur back-end</option>
+            </select>
+            <select name="expérience" id="expérience">
+              <option value="expérience minimum">expérience</option>
+              <option value="développeur junior">développeur junior</option>
+              <option value="développeur senior">développeur senior</option>
+            </select>
+            <input type="text" name="localisation" id="localisation" placeholder="Localisation">
+            <input type="text" name="rechercher" id="rechercher" placeholder="Rechercher un membre">
+            <button name="button" type="submit" class="ButtonBlue">Rechercher</button>
+          </form>
+        </div>
+      </div>
+      <div class="Users">
+        <article class="UserCard">
+          <img class="UserImg" src="./src/img/profile_picture.jpg" alt="">
+          <header class="NameUser">Nom Prénom</header>
+          <div class="content">
+            <p>Développeur Fullstack</p>
+            <ul>
+              <li>Compétences :</li>
+              <li>HTML5 et CSS3 : &#9733 &#9733 &#9733 &#9733</li>
+              <li>Javascript : &#9733 &#9733 &#9733</li>
+              <li>Design UX/UI : &#9733 &#9733 &#9733</li>
+              <li>Anglais : niveau B2</li>
+            </ul>
+          </div>
+        </article>
+        <article class="UserCard">
+          <img class="UserImg" src="./src/img/profile_picture.jpg" alt="">
+          <header>Nom Prénom</header>
+          <div class="content">
+            <p>short content</p>
+          </div>
+        </article>
+        <article class="UserCard">
+          <img class="UserImg" src="./src/img/profile_picture.jpg" alt="">
+          <header>Nom Prénom</header>
+          <div class="content">
+            <p>short content</p>
+          </div>
+        </article>
+        <article class="UserCard">
+          <img class="UserImg" src="./src/img/profile_picture.jpg" alt="">
+          <header>Nom Prénom</header>
+          <div class="content">
+            <p>short content</p>
+          </div>
+        </article>
+        <article class="UserCard">
+          <img class="UserImg" src="./src/img/profile_picture.jpg" alt="">
+          <header>Nom Prénom</header>
+          <div class="content">
+            <p>short content</p>
+          </div>
+        </article>
+        <article class="UserCard">
+          <img class="UserImg" src="./src/img/profile_picture.jpg" alt="">
+          <header>Nom Prénom</header>
+          <div class="content">
+            <p>short content</p>
+          </div>
+        </article>
+        <article class="UserCard">
+          <img class="UserImg" src="./src/img/profile_picture.jpg" alt="">
+          <header>Nom Prénom</header>
+          <div class="content">
+            <p>short content</p>
+          </div>
+        </article>
+        <article class="UserCard">
+          <img class="UserImg" src="./src/img/profile_picture.jpg" alt="">
+          <header>Nom Prénom</header>
+          <div class="content">
+            <p>short content</p>
+          </div>
+        </article>
+      </div>
+    </div>
+    <script src="./src/comunaute.js"></script>
     <script src="./src/index.js"></script>
   </body>
 </html>
