--- a/communaute.html
+++ b/communaute.html
@@ -125,7 +125,7 @@
         </article>
       </div>
     </div>
-    <script src="./src/comunaute.js"></script>
+    <script src="./src/communaute.js"></script>
     <script src="./src/index.js"></script>
   </body>
 </html>
