responsive et partie acceuil

--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@
       href="https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Amita&family=Roboto+Condensed:wght@300;400;700&display=swap"
       rel="stylesheet"
     />
+    <script
+      src="https://kit.fontawesome.com/45e38e596f.js"
+      crossorigin="anonymous"
+    ></script>
   </head>
   <body>
     <header>
@@ -58,7 +62,7 @@
             a disposition sur notre plateforme des professionnel issue de la
             formation dispensé par la WildCodeSchool.
           </p>
-          <button><a href="about.html">A propos</a></button>
+          <a href="./about.html" class="button">Voir plus</a>
         </div>
       </div>
     </section>
@@ -104,9 +108,7 @@
         </h2>
       </div>
     </section>
-    <section>
-      <div class="glass-background"></div>
-    </section>
+
     <section>
       <div class="bloc-contact">
         <h3>Vous êtes Wilder ?</h3>
@@ -127,6 +129,7 @@
         formation
       </p>
     </footer>
+    <script src=".//src/UserCard.js"></script>
     <script src="./src/index.js"></script>
   </body>
 </html>
