--- a/communaute.html
+++ b/communaute.html
@@ -149,7 +149,7 @@
         </article> -->
       </div>
     </div>
-    <script src="./src/communaute.js"></script>
-    <script src="./src/index.js"></script>
+    <script src="./src/communaute.js" defer></script>
+    <script src="./src/index.js" defer></script>
   </body>
 </html>
