--- a/communaute.html
+++ b/communaute.html
@@ -84,79 +84,11 @@
         </div>
       </div>
       <div class="Users" id="Users">
-        <!-- <article class="UserCard">
-          <img class="UserImg" src="./src/img/profile_picture.jpg" alt="">
-          <header class="NameUser">Nom Prénom</header>
-          <div class="content">
-            <p>Développeur Fullstack</p>
-            <ul>
-              <li>Compétences :</li>
-              <li>HTML5 et CSS3 : &#9733 &#9733 &#9733 &#9733</li>
-              <li>Javascript : &#9733 &#9733 &#9733</li>
-              <li>Design UX/UI : &#9733 &#9733 &#9733</li>
-              <li>Anglais : niveau B2</li>
-            </ul>
-          </div>
-        </article>
-        <article class="UserCard">
-          <img class="UserImg" src="./src/img/profile_picture.jpg" alt="">
-          <header>Nom Prénom</header>
-          <div class="content">
-            <p>short content</p>
-          </div>
-        </article>
-        <article class="UserCard">
-          <img class="UserImg" src="./src/img/profile_picture.jpg" alt="">
-          <header>Nom Prénom</header>
-          <div class="content">
-            <p>short content</p>
-          </div>
-        </article>
-        <article class="UserCard">
-          <img class="UserImg" src="./src/img/profile_picture.jpg" alt="">
-          <header>Nom Prénom</header>
-          <div class="content">
-            <p>short content</p>
-          </div>
-        </article>
-        <article class="UserCard">
-          <img class="UserImg" src="./src/img/profile_picture.jpg" alt="">
-          <header>Nom Prénom</header>
-          <div class="content">
-            <p>short content</p>
-          </div>
-        </article>
-        <article class="UserCard">
-          <img class="UserImg" src="./src/img/profile_picture.jpg" alt="">
-          <header>Nom Prénom</header>
-          <div class="content">
-            <p>short content</p>
-          </div>
-        </article>
-        <article class="UserCard">
-          <img class="UserImg" src="./src/img/profile_picture.jpg" alt="">
-          <header>Nom Prénom</header>
-          <div class="content">
-            <p>short content</p>
-          </div>
-        </article>
-        <article class="UserCard">
-          <img class="UserImg" src="./src/img/profile_picture.jpg" alt="">
-          <header>Nom Prénom</header>
-          <div class="content">
-            <p>short content</p>
-          </div>
-<<<<<<< HEAD
-        </article>
+        
       </div>
     </div>
-    <script src="./src/comunaute.js"></script>
-=======
-        </article> -->
-      </div>
-    </div>
-    <script src="./src/communaute.js"></script>
-    >>>>>>> 6705444fc8dc0eec47c3c8102e9039e389cb6650
-    <script src="./src/index.js"></script>
+
+    <script src="./src/communaute.js" defer></script>
+    <script src="./src/index.js" defer></script>
   </body>
 </html>
