--- a/about.html
+++ b/about.html
@@ -14,6 +14,7 @@
     />
     <link rel="stylesheet" href="./src/styles.css/aboutStyle.css" />
   </head>
+  <body>
     <nav>
       <div class="logo">
         <h1>FIVES</h1>
@@ -29,7 +30,7 @@
         <div class="line2"></div>
       </div>
     </nav>
-  <body>
+  
     <!--Partie About Rafael Dubois-->
 
     <section class="presentation" id="presentation">
@@ -41,7 +42,7 @@
         </button>
       </div>
 
-      <img src="./src/img/light1.png" class="light" id="light" />
+      <img src="./src/img/light1.png" class="light" id="light" alt ="imageoflight"/>
 
       <h6>Réalisation de Site internet responsive</h6>
       <p>
