jimmy personal page added

--- a/presentation_jimmy.html
+++ b/presentation_jimmy.html
@@ -36,7 +36,6 @@
         <div class="header-presentation">
           <h1>Jimmy CARTER</h1>
           <h2>Développeur Front - <span>Expert HTML</span></h2>
-          
         </div>
       </div>
     </header>
@@ -45,8 +44,10 @@
         <div class="presentation">
           <h2>Présentation :</h2>
           <h3>Expert développeur HTML</h3>
-          <p>Vous voulez une page web HTML qui respecte les standards W3C ? Je suis la personne qu'il vous faut !</p>
-          
+          <p>
+            Vous voulez une page web HTML qui respecte les standards W3C ? Je
+            suis la personne qu'il vous faut !
+          </p>
 
           <h3>Développeur de pages HTML pour web & mobile</h3>
 
@@ -55,40 +56,45 @@
             création de pages en HTML.
           </p>
           <h3>Ma méthode de Travail</h3>
+          <h4>Relation client :</h4>
           <p>
-            <strong>Relation client : </strong>Autonome et à l'écoute de vos
-            besoins. Mon travail est de vous apporter un regard extérieur sur
-            votre projet. Je n'hésiterai pas à vous partager mes conseils
-            d'amélioration pour la propreté, la maintenabilité et la visibilité
-            de vos pages HTML.
+            Autonome et à l'écoute de vos besoins. Mon travail est de vous
+            apporter un regard extérieur sur votre projet. Je n'hésiterai pas à
+            vous partager mes conseils d'amélioration pour la propreté, la
+            maintenabilité et la visibilité de vos pages HTML.
           </p>
+          <h4>Veille technologiqe :</h4>
           <p>
-            <strong>Veille technologiqe : </strong> Je me tiens informé et me
-            mets à jour sur les nouvelles pratiques et nouveaux standards du W3C
-            chaque semaine pour vous garantir une page HTML conforme aux normes
-            strictes en vigueur.
+            Je me tiens informé et me mets à jour sur les nouvelles pratiques et
+            nouveaux standards du W3C chaque semaine pour vous garantir une page
+            HTML conforme aux normes strictes en vigueur.
           </p>
+          <h4>Suivi client :</h4>
           <p>
-            <strong>Suivi client : </strong> Les phases d'expertise et mes
-            conseils sont effectuées de manière régulière et à toutes les étapes
-            des projets afin de faire de ces projets des succès.
+            Les phases d'expertise et mes conseils sont effectuées de manière
+            régulière et à toutes les étapes des projets afin de faire de ces
+            projets des succès.
           </p>
+          <h4>Intégration Web :</h4>
           <p>
-            <strong>Intégration Web : </strong> Les pages HTML sont réalisées en
-            solo du début à la fin en respectant vos besoins. Une fois les pages
-            réalisés, je sélectionne pour vous les meilleurs web designer et
-            vous met en relation avec eux pour la réalisation de votre design.
+            Les pages HTML sont réalisées en solo du début à la fin en
+            respectant vos besoins. Une fois les pages réalisés, je sélectionne
+            pour vous les meilleurs web designer et vous met en relation avec
+            eux pour la réalisation de votre design.
           </p>
         </div>
       </main>
 
       <aside class="aside">
         <div>
-          <h3>Mon CV</h2>
-          <button class="btn">
-            <a href="src/pdf/jimmycartercv.pdf" target="_blank">Télécharger mon CV</a>
+          <h3>Mon CV</h3>
+          <button
+            class="btn"
+            onclick="location.href='./src/pdf/jimmycartercv.pdf'"
+            type="button"
+          >
+            Télécharger mon CV
           </button>
-
         </div>
         <div>
           <h3>Coordonnées</h3>
@@ -98,7 +104,6 @@
           <button class="btn">Me contacter</button>
         </div>
       </aside>
-
     </div>
     <footer>
       <p>
