--- a/présentation.html
+++ b/présentation.html
@@ -1,3 +1,10 @@
+<!-- 
+ 
+ * Auteur : AURY Gaêl
+ *   Projet FIVES
+ 
+ -->
+
 <!DOCTYPE html>
 <html lang="fr">
   <head>
@@ -33,8 +40,11 @@
         </div>
       </nav>
     </header>
+
+    <div></div>
+
     <div class="wrap">
-      <div class="banner-presentation">
+      <div class="banner-presentation banner">
         <div>
           <h1>Aury Gaël</h1>
           <h6>Expert UI/UX - <span>Développeur FullStack</span></h6>
