add formular page

--- a/contact.html
+++ b/contact.html
@@ -22,7 +22,7 @@
         <li><a href="index.html">Acceuil</a></li>
         <li><a href="communaute.html">Communauté</a></li>
         <li><a href="about.html">A propos</a></li>
-        <li><a class="current" href="contact.html">Contact</a></li>
+        <li><a class="current" href="formular.html">Contact</a></li>
       </ul>
       <div class="burger">
         <div class="line1"></div>
