--- a/communaute.html
+++ b/communaute.html
@@ -23,7 +23,7 @@
         <li><a href="index.html">Acceuil</a></li>
         <li><a class="current" href="communaute.html">Communauté</a></li>
         <li><a href="about.html">A propos</a></li>
-        <li><a href="contact.html">Contact</a></li>
+        <li><a href="formular.html">Contact</a></li>
       </ul>
       <div class="burger">
         <div class="line1"></div>
