--- a/presentation_jimmy.html
+++ b/presentation_jimmy.html
@@ -22,10 +22,10 @@
           <h1>FIVES</h1>
         </div>
         <ul class="nav-links">
-          <li><a class="current" href="index.html">Acceuil</a></li>
-          <li><a href="communaute.html">Communauté</a></li>
+          <li><a href="index.html">Acceuil</a></li>
+          <li><a class="current" href="communaute.html">Communauté</a></li>
           <li><a href="about.html">A propos</a></li>
-          <li><a href="contact.html">Contact</a></li>
+          <li><a href="formular.html">Contact</a></li>
         </ul>
         <div class="burger">
           <div class="line1"></div>
