--- a/about.html
+++ b/about.html
@@ -14,22 +14,7 @@
     />
     <link rel="stylesheet" href="./src/styles.css/aboutStyle.css" />
   </head>
-  <nav>
-    <div class="logo">
-      <h1>FIVES</h1>
-    </div>
-    <ul class="nav-links">
-      <li><a href="index.html">Acceuil</a></li>
-      <li><a href="communaute.html">Communauté</a></li>
-      <li><a class="current" href="about.html">A propos</a></li>
-      <li><a href="formular.html">Contact</a></li>
-    </ul>
-    <div class="burger">
-      <div class="line1"></div>
-      <div class="line2"></div>
-    </div>
-  </nav>
-  <body>
+
     <!--Partie About Rafael Dubois-->
 
     <section class="presentation" id="presentation">
@@ -40,7 +25,9 @@
         </button>
       </div>
 
-      <img src="./src/img/light1.png" class="light" id="light" />
+      <img src="./src/img/light1.png" class="light" id="light" alt ="imageoflight"/>
+
+ 
 
       <h6>Réalisation de Site internet responsive</h6>
       <p>
