mise a jour page d'acceuil + html formulaire, REVOIR LE TRAVAILDE OUALID, URGENT URGENT URGENT

--- a/index.html
+++ b/index.html
@@ -61,26 +61,26 @@
             appel à nous ?
           </h2>
           <p>
-            Nous répondons a vos besoin et ceux de votre activité de façon
+            Nous répondons à vos besoins et ceux de votre activité de façon
             humaine et professionnelle.
           </p>
           <p>
             Nous vous accompagnons dans le recherche d'un développeur et mettons
-            a disposition sur notre plateforme des professionnel issue de la
-            formation dispensé par la WildCodeSchool.
+            a disposition sur notre plateforme des professionnelle issus de la
+            formation dispensée par la WildCodeSchool.
           </p>
-          <a href="./about.html" class="button">Voir plus</a>
+          <a href="./about.html"
+            ><button type="submit" href="./about.html" class="button">
+              En savoir plus
+            </button></a
+          >
         </div>
       </div>
     </section>
     <section>
       <div class="bloc-2">
         <h2>Notre Objectif pour votre projet :</h2>
-        <div class="our-job">
-          <p>Améliorer votre image</p>
-          <p>Multipliez vos contact</p>
-          <p>Augmenter votre notoriété</p>
-        </div>
+        <div class="our-job"></div>
         <div class="bloc-ico">
           <div class="flex-ico ico1">
             <img src="./src/ico/responsive.png" alt="" width="99px" />
@@ -88,22 +88,22 @@
           </div>
           <div class="flex-ico ico2">
             <img src="./src/ico/design.png" alt="" width="99px" />
-            <p>Réalisation de Site internet responsive</p>
+            <p>Création de votre maquette graphique</p>
           </div>
           <div class="flex-ico ico3">
             <img src="./src/ico/referencement.png" alt="" width="99px" />
-            <p>Réalisation de Site internet responsive</p>
+            <p>Conseil et suivi durant la phase de création</p>
           </div>
           <div class="flex-ico ico4">
             <img src="./src/ico/seo.png" alt="" width="99px" />
-            <p>Réalisation de Site internet responsive</p>
+            <p>Référencement SEO, Web Marketing</p>
           </div>
         </div>
         <div>
           <p>
-            Nos développeurs s'adapte a vos besoin est utilise différentes
-            technique de production. Pour rester informé de leurs évolutions
-            n'hésitez pas a consulter la rubrique dédiés à la communauté.
+            Nos développeurs s'adaptent a vos besoins et utilisent différentes
+            techniques de production. Pour rester informés de leurs évolutions
+            n'hésitez pas à consulter la rubrique dédiée à la communauté.
           </p>
         </div>
       </div>
@@ -115,6 +115,11 @@
         </h2>
       </div>
     </section>
+    <section class="cards-background">
+      <h5>Une unité d'élite prête à vous servir</h5>
+      <div class="cards"></div>
+      <p>Voir nos autres développeurs</p>
+    </section>
     <section class="contact">
       <div class="bloc-contact">
         <h3>Vous êtes Wilder ?</h3>
@@ -124,7 +129,11 @@
           votre demande
         </p>
 
-        <button>Nous rejoindre</button>
+        <a href="./communaute.html"
+          ><button type="submit" href="./about.html" class="button">
+            Nous rejoindre
+          </button></a
+        >
         <button class="buttonContact" data-modal="modalC">
           Nous contacter
         </button>
@@ -155,11 +164,11 @@
     </section>
     <footer>
       <p>
-        Mention légale - tout droit reservé - projet réalisé dans un cadre de
+        Mention légale - tous drois reservés - projet réalisé dans un cadre de
         formation
       </p>
     </footer>
-    <script src=".//src/UserCard.js"></script>
+    <script src="./src/UserCard.js"></script>
     <script src="./src/index.js"></script>
   </body>
 </html>
