--- a/about.html
+++ b/about.html
@@ -19,7 +19,7 @@
       <h1>FIVES</h1>
     </div>
     <ul class="nav-links">
-      <li><a href="index.html">Acceuil</a></li>
+      <li><a href="index.html">Accueil</a></li>
       <li><a href="communaute.html">Communauté</a></li>
       <li><a class="current" href="about.html">A propos</a></li>
       <li><a href="contact.html">Contact</a></li>
@@ -40,12 +40,7 @@
         </button>
       </div>
 
-      <img
-        src="./src/img/light1.png"
-        class="light"
-        id="light"
-        alt="imageoflight"
-      />
+      <img src="./src/img/light1.png" class="light" id="light" />
 
       <h6>Réalisation de Site internet responsive</h6>
       <p>
