--- a/index.html
+++ b/index.html
@@ -32,10 +32,10 @@
           <h1>FIVES</h1>
         </div>
         <ul class="nav-links">
-          <li><a class="current" href="index.html">Acceuil</a></li>
+          <li><a class="current" href="index.html">Accueil</a></li>
           <li><a href="communaute.html">Communauté</a></li>
           <li><a href="about.html">A propos</a></li>
-          <li><a href="formular.html">Contact</a></li>
+          <li><a href="contact.html">Contact</a></li>
         </ul>
         <div class="burger">
           <div class="line1"></div>
@@ -57,9 +57,10 @@
         <div class="img-left"></div>
         <div class="bloc-txt">
           <h2>
-            <span><img src="./src/ico/puce.png" alt='"' /></span> Pourquoi faire
+            <span><img src="./src/ico/puce.png" alt='"' /></span>Pourquoi faire
             appel à nous ?
           </h2>
+          <div class="divider-mark"></div>
           <p>
             Nous répondons à vos besoins et ceux de votre activité de façon
             humaine et professionnelle.
@@ -116,7 +117,7 @@
       </div>
     </section>
     <section class="cards-background">
-      <h5>Une unité d'élite prête à vous servir</h5>
+      <h3>Une unité d'élite prête à vous servir</h3>
       <div class="cards"></div>
       <p>Voir nos autres développeurs</p>
     </section>
