--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
           <li><a class="current" href="index.html">Accueil</a></li>
           <li><a href="communaute.html">Communauté</a></li>
           <li><a href="about.html">A propos</a></li>
-          <li><a href="contact.html">Contact</a></li>
+          <li><a href="formular.html">Contact</a></li>
         </ul>
         <div class="burger">
           <div class="line1"></div>
@@ -119,12 +119,11 @@
     <section class="cards-background">
       <h3>Une unité d'élite prête à vous servir</h3>
       <div class="cards"></div>
-      <p>Voir nos autres développeurs</p>
     </section>
     <section class="contact">
       <div class="bloc-contact">
         <h3>Vous êtes Wilder ?</h3>
-        <h3>Vous souhaitez travailler avec nous sur un projet ?</h3>
+        <h6>Vous souhaitez travailler avec nous sur un projet ?</h6>
         <p>
           Nous sommes à votre écoute et garantissons un traitement rapide de
           votre demande
