--- a/about.html
+++ b/about.html
@@ -22,7 +22,7 @@
       <li><a href="index.html">Accueil</a></li>
       <li><a href="communaute.html">Communauté</a></li>
       <li><a class="current" href="about.html">A propos</a></li>
-      <li><a href="contact.html">Contact</a></li>
+      <li><a href="formular.html">Contact</a></li>
     </ul>
     <div class="burger">
       <div class="line1"></div>
