--- a/presentation_jimmy.html
+++ b/presentation_jimmy.html
@@ -25,7 +25,7 @@
           <li><a class="current" href="index.html">Accueil</a></li>
           <li><a href="communaute.html">Communauté</a></li>
           <li><a href="about.html">A propos</a></li>
-          <li><a href="contact.html">Contact</a></li>
+          <li><a href="formular.html">Contact</a></li>
         </ul>
         <div class="burger">
           <div class="line1"></div>
