--- a/index.html
+++ b/index.html
@@ -70,11 +70,12 @@
             a disposition sur notre plateforme des professionnelle issus de la
             formation dispensée par la WildCodeSchool.
           </p>
-          <a href="./about.html"
-            ><button type="submit" href="./about.html" class="button">
-              En savoir plus
-            </button></a
+          <button
+            class="button"
+            onclick="window.location.href = 'http://127.0.0.1:5502/about.html';"
           >
+            Nous rejoindre
+          </button>
         </div>
       </div>
     </section>
@@ -84,19 +85,19 @@
         <div class="our-job"></div>
         <div class="bloc-ico">
           <div class="flex-ico ico1">
-            <img src="./src/ico/responsive.png" alt="" width="99px" />
+            <img src="./src/ico/responsive.png" alt="" width="99" />
             <p>Réalisation de Site internet responsive</p>
           </div>
           <div class="flex-ico ico2">
-            <img src="./src/ico/design.png" alt="" width="99px" />
+            <img src="./src/ico/design.png" alt="" width="99" />
             <p>Création de votre maquette graphique</p>
           </div>
           <div class="flex-ico ico3">
-            <img src="./src/ico/referencement.png" alt="" width="99px" />
+            <img src="./src/ico/referencement.png" alt="" width="99" />
             <p>Conseil et suivi durant la phase de création</p>
           </div>
           <div class="flex-ico ico4">
-            <img src="./src/ico/seo.png" alt="" width="99px" />
+            <img src="./src/ico/seo.png" alt="" width="99" />
             <p>Référencement SEO, Web Marketing</p>
           </div>
         </div>
@@ -128,12 +129,13 @@
           Nous sommes à votre écoute et garantissons un traitement rapide de
           votre demande
         </p>
-
-        <a href="./communaute.html"
-          ><button type="submit" href="./about.html" class="button">
-            Nous rejoindre
-          </button></a
+        <button
+          class="button"
+          onclick="window.location.href = 'http://127.0.0.1:5502/communaute.html';"
         >
+          Nous rejoindre
+        </button>
+
         <button class="buttonContact" data-modal="modalC">
           Nous contacter
         </button>
@@ -144,7 +146,7 @@
             <a class="close">&times;</a>
             <h3>Contacter Nous</h3>
             <div>
-              <input type="fname" type="text" name="name" placeholder="Nom" />
+              <input type="text" name="name" placeholder="Nom" />
               <input type="text" name="name" placeholder="Email" />
               <input
                 type="text"
@@ -157,7 +159,7 @@
             <div>
               <textarea rows="4"></textarea>
             </div>
-            <button type="submit" href="/">Envoyer</button>
+            <button type="submit">Envoyer</button>
           </div>
         </div>
       </div>
