--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
     <section>
       <div class="parallax">
         <h2 id="goIn">
-          Notre Engagement, vous fournir une livraison rapide est fonctionnel
+          Notre Engagement, vous fournir une livraison rapide et fonctionnelle
         </h2>
       </div>
     </section>
